--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&family=Rock+Salt&display=swap"
     rel="stylesheet">
+  <!-- flowbite cdn  -->
+  <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.5/dist/flowbite.min.css" />
   <title>Do.it</title>
 </head>
 
@@ -43,6 +45,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+  <!-- flowbite cdn  -->
+  <script src="https://unpkg.com/flowbite@1.5.5/dist/flowbite.js"></script>
 </body>
 
 </html>
