website title fixed

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     rel="stylesheet">
   <!-- flowbite cdn  -->
   <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.5/dist/flowbite.min.css" />
-  <title>Do.it</title>
+  <title>DO.IT</title>
 </head>
 
 <body>
